limited database connection
